# secret-agi

./: .gitignore  AGENT_DEVELOPMENT_READY.md  ARCHITECTURE.md  CLAUDE.md  DATABASE.md  DEBUG_GAMES.md  JOURNAL.md  JOURNAL_ARCHIVE_2025-07-04.md  Justfile  PRD.md  README.md  SECRET_AGI_RULES.md  TODO.md  alembic.ini  convert_tests_to_async.py  debug_game.py  fix_scenarios.py  fix_test_indentation.py  fix_test_syntax.py  launch_web_viewer.py  main.py  pyproject.toml  test_completeness.py  test_your_agents.py
alembic/: env.py
alembic/versions/: 0643cad4739b_add_soft_delete_to_games_table.py  0d8cb6d699e0_initial_schema.py
secret_agi/: __init__.py  settings.py
secret_agi/api/: __init__.py  simple_api.py
secret_agi/database/: __init__.py  connection.py  enums.py  models.py  operations.py  recovery.py  unit_of_work.py
secret_agi/engine/: __init__.py  actions.py  events.py  game_engine.py  models.py  rules.py
secret_agi/orchestrator/: __init__.py  simple_orchestrator.py
secret_agi/players/: __init__.py  agent_template.py  base_player.py  random_player.py
secret_agi/ui/: game_viewer.html
tests/: test_actions.py  test_api_fixes.py  test_debugging_insights.py  test_edge_cases_recovery.py  test_emergency_safety.py  test_game_engine.py  test_information_management.py  test_integration.py  test_models.py  test_power_system.py  test_rules.py  test_scenarios.py  test_validated_edge_cases.py  test_veto_system.py  test_web_api.py  test_win_conditions.py
